--- a/package.json
+++ b/package.json
@@ -14,9 +14,20 @@
     "@types/react-dom": "18.0.9",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "fullpage.js": "^2.9.6",
+    "jquery": "^3.6.1",
     "next": "13.0.6",
+    "pageable": "^0.6.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-tooltip": "^5.0.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.14",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
